--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -180,6 +180,9 @@ background-origin: border-box;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     cursor: pointer;
+    @media screen and (max-width: 1199px) {
+        margin-left: 125px;
+      }
 }
 .sign{
     @include font(700,16px,1.875,0.06em);
