--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,10 +9,10 @@
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),url(../images/hero/hero-background_desc.jpg);    
         }    
     .container{
-    padding: 118px 0;
+    padding: 118px 15px;
     text-align: center;
     @media screen and (min-width:1200px) {
-        padding: 200px 0;    
+        padding: 200px 15px;    
         }
     }
     h1 {
