--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -7,7 +7,7 @@
     }
     background:#F5F4FA;
     .team__list{
-        margin-bottom: -30px;
+        
         @media screen and (min-width:768px) {
             display: flex;
             flex-wrap: wrap;
@@ -16,10 +16,11 @@
     }
     .team__main-title {
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     @include font(var(--font-weigt-bold),28px,1.167,0.03em);
     @media screen and (min-width:1200px) {
-        font-size: 36px;    
+        font-size: 36px;  
+        margin-bottom: 50px;
     }
     color: var(--main-text-color);
     }
@@ -64,4 +65,9 @@
 .team__img_signature{
     padding-top: 30px;
     padding-bottom: 16px;
+}
+.social-icon-list_geometry{
+        @media screen and (max-width:480px) {
+        
+    }
 }
