--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -9,7 +9,7 @@
         margin-bottom: -30px;
         display: flex;
         flex-wrap: wrap;
-        margin-right: -30px;
+        margin-left: -30px;
         justify-content: center;
         }
     .client__title {
@@ -27,7 +27,7 @@
         margin-bottom: 30px;
         @media screen and (min-width:480px) {
             flex-basis: calc((100% - 2*30px) / 2);
-            margin-right: 30px;
+            margin-left: 30px;
         }
         @media screen and (min-width:768px) {
             flex-basis: calc((100% - 3*30px) / 3);
