--- a/css/main.css
+++ b/css/main.css
@@ -425,9 +425,10 @@ button {
 .social-icon-list {
   display: flex;
   justify-content: center;
+  margin-right: -10px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .social-icon-list {
     justify-content: space-around;
   }
@@ -454,6 +455,12 @@ button {
   fill: var(--white-color);
   background-color: var(--white-color);
   transition: fill var(--transition-duration) var(--transition-timing-function), background-color var(--transition-duration) var(--transition-timing-function);
+}
+
+@media screen and (max-width: 1199px) {
+  .social-icon-link {
+    margin-right: 10px;
+  }
 }
 
 .social-icon-link:hover, .social-icon-link:focus {
@@ -932,6 +939,12 @@ footer .logo {
   }
 }
 
+@media screen and (max-width: 479px) {
+  .footer-form-button {
+    margin-left: 45px;
+  }
+}
+
 .sign {
   font-weight: 700;
   font-size: 16px;
@@ -963,6 +976,13 @@ footer .logo {
   .footer-input {
     max-width: 350px;
     margin-right: 12px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .footer-input {
+    max-width: 290px;
+    margin-right: 6px;
   }
 }
 
@@ -1265,7 +1285,7 @@ footer .logo {
   .main-messag .main-messag__list {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
   }
 }
 
@@ -1293,14 +1313,13 @@ footer .logo {
 @media screen and (min-width: 768px) {
   .main-messag .main-messag__item {
     flex-basis: calc((100% - 2*30px) / 2);
-    margin-right: 30px;
+    margin-left: 30px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .main-messag .main-messag__item {
     flex-basis: calc((100% - 4*30px) / 4);
-    margin-right: 30px;
   }
 }
 
@@ -1449,11 +1468,15 @@ footer .logo {
   }
 }
 
+.team .team__list {
+  margin-bottom: -30px;
+}
+
 @media screen and (min-width: 768px) {
   .team .team__list {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
   }
 }
 
@@ -1490,7 +1513,6 @@ footer .logo {
   display: block;
   max-width: 100%;
   height: auto;
-  margin-right: 30px;
   justify-content: center;
   background: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1500,14 +1522,13 @@ footer .logo {
 @media screen and (min-width: 768px) {
   .team .team__item {
     flex-basis: calc((100% - 2*30px) / 2);
-    margin-right: 30px;
+    margin-left: 30px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .team .team__item {
     flex-basis: calc((100% - 4*30px) / 4);
-    margin-right: 30px;
   }
 }
 
@@ -1547,7 +1568,7 @@ footer .logo {
   margin-bottom: -30px;
   display: flex;
   flex-wrap: wrap;
-  margin-right: -30px;
+  margin-left: -30px;
   justify-content: center;
 }
 
@@ -1576,7 +1597,7 @@ footer .logo {
 @media screen and (min-width: 480px) {
   .client .client__item {
     flex-basis: calc((100% - 2*30px) / 2);
-    margin-right: 30px;
+    margin-left: 30px;
   }
 }
 
@@ -1654,7 +1675,7 @@ footer .logo {
   .img-portfolio .img-portfolio__list {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -30px;
+    margin-left: -30px;
     margin-top: 30px;
   }
 }
@@ -1668,7 +1689,6 @@ footer .logo {
 .img-portfolio .img-portfolio__item {
   width: 100%;
   margin-bottom: 30px;
-  margin-right: 30px;
   margin-bottom: 30px;
   transition: box-shadow var(--transition-duration) var(--transition-timing-function);
 }
@@ -1676,7 +1696,7 @@ footer .logo {
 @media screen and (min-width: 768px) {
   .img-portfolio .img-portfolio__item {
     flex-basis: calc((100% - 2*30px) / 2);
-    margin-right: 30px;
+    margin-left: 30px;
   }
 }
 
