--- a/sass/layout/_main-messag.scss
+++ b/sass/layout/_main-messag.scss
@@ -14,7 +14,7 @@
         @media screen and (min-width:768px) {
             display: flex;
             flex-wrap: wrap;
-            margin-right: -30px;
+            margin-left: -30px;
         }
     }
     .main-messag__title {
@@ -31,11 +31,11 @@
         margin-bottom: 30px;
         @media screen and (min-width:768px) {
             flex-basis: calc((100% - 2*30px) / 2);
-            margin-right: 30px;
+            margin-left: 30px;
         }
         @media screen and (min-width:1200px) {
             flex-basis: calc((100% - 4*30px) / 4);
-            margin-right: 30px;    
+               
         }
         
         &::before{
