--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -13,7 +13,7 @@
         @media screen and (min-width:768px) {
             display: flex;
             flex-wrap: wrap;
-            margin-right: -30px;
+            margin-left: -30px;
             margin-top: 30px;
         }
         @media screen and (min-width:1200px) {
@@ -25,12 +25,11 @@
         margin-bottom: 30px;
         @media screen and (min-width:768px) {
             flex-basis: calc((100% - 2*30px) / 2);
-            margin-right: 30px;
+            margin-left: 30px;
         }
         @media screen and (min-width:1200px) {
             flex-basis: calc((100% - 3*30px) / 3);
             }
-        margin-right: 30px;
         margin-bottom: 30px;
         transition: box-shadow var(--transition-duration) var(--transition-timing-function);
         &:hover,&:focus{
