--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -7,11 +7,11 @@
     }
     background:#F5F4FA;
     .team__list{
-        
+        margin-bottom: -30px;
         @media screen and (min-width:768px) {
             display: flex;
             flex-wrap: wrap;
-            margin-right: -30px;
+            margin-left: -30px;
         }
     }
     .team__main-title {
@@ -35,16 +35,15 @@
         margin-bottom: 30px;
         @media screen and (min-width:768px) {
             flex-basis: calc((100% - 2*30px) / 2);
-            margin-right: 30px;
+            margin-left: 30px;
         }
         @media screen and (min-width:1200px) {
             flex-basis: calc((100% - 4*30px) / 4);
-            margin-right: 30px;    
         }
         display: block;
         max-width: 100%;
         height: auto;
-        margin-right: 30px;
+        
         justify-content: center;
         background: var(--white-color);
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
